--- a/vcweb/core/templates/participant-index.html
+++ b/vcweb/core/templates/participant-index.html
@@ -8,28 +8,25 @@ Virtual Commons Web Participant Dashboard
 {% endblock %}
 
 {% block page %}
-<div class='info'>
-    Welcome back, {{participant}}.
+<div class='info infoIcon ui-corner-all'>
+    Welcome back, {{participant}}.  Experiments you're participating in are listed below.
 </div>
 
+<div id='experiments'>
 {% for experiment_metadata, experiment_status_dict in experiment_dict.items %}
-<h3> {{ experiment_metadata|title }} </h3>
-<div id='experiments' class='notice'>
-    {% for experiment_status, experiments in experiment_status_dict.items %}
-    <h3>{{experiment_status|title}}</h3>
-    {% for experiment in experiments %}
-    <div class='ui-state-highlight ui-corner-all'>
-        <a href='{{ experiment.participant_url }}'>
-            <span class='icon-left ui-icon {{experiment_status|lower}}'></span> 
-            {{ experiment.status_line }}, created {{experiment.date_created|date:"SHORT_DATETIME_FORMAT"}}
-        </a>
-    </div>
-    {% empty %}
-    <div class='ui-state-error ui-corner-all'><span class='icon-left ui-icon ui-icon-alert'></span>No <b>{{ experiment_status|lower }}</b> experiments</div>
-    {% endfor %}
-    {% endfor %}
+<h3> {{ experiment_metadata.title }} </h3>
+{% for experiment_status, experiments in experiment_status_dict.items %}
+{% if experiments %}
+<h4>{{experiments.0.get_status_display}}</h4>
+{% for experiment in experiments %}
+<div style='padding: 10px;' class='ui-state-highlight'>
+    <a href='{{ experiment.participant_url }}'>
+        <span class='icon-left ui-icon {{experiment_status|lower}}'></span>{{ experiment.status_line }}
+    </a>
 </div>
-{% empty %}
-
 {% endfor %}
+{% endif %}
+{% endfor %}
+{% endfor %}
+</div>
 {% endblock page %}
