--- a/vcweb/forestry/templates/forestry/wait.html
+++ b/vcweb/forestry/templates/forestry/wait.html
@@ -14,7 +14,6 @@
             switch (json.message_type) {
             case 'update':
                 console.log("updating data");
-                $('#round_' + json.round_sequence_number);
                 break;
             case 'goto':
                 console.log("going to " + json.url);
@@ -58,7 +57,7 @@ The facilitator will start the next round when every participant is ready.
         </thead>
         <tbody>
             {% for harvest_round_data in participant_history %}
-            <tr id='round_{{harvest_round_data.round_configuration.sequence_number}}'>
+            <tr>
                 <td>
                     {% if harvest_round_data.round_in_progress %}
                     <div id='round-in-progress' style='line-height: 0.9em;' class='alert alertIcon ui-corner-all tooltip' title='This round is still in progress so only your harvest decision for this round is being shown.'>
@@ -74,9 +73,11 @@ The facilitator will start the next round when every participant is ready.
                     0
                     {%endif%}
                 </td>
-                <td>{{harvest_round_data.group_harvest.value}}</td>
-                <td>{{harvest_round_data.group_regrowth.value}}</td>
-                <td>{{harvest_round_data.final_number_of_trees}}</td>
+                {% with sequence_number=harvest_round_data.round_configuration.sequence_number %}
+                <td id='group_harvest_{{sequence_number}}'>{{harvest_round_data.group_harvest.value}}</td>
+                <td id='group_regrowth_{{sequence_number}}'>{{harvest_round_data.group_regrowth.value}}</td>
+                <td id='final_number_of_trees_{{sequence_number}}'>{{harvest_round_data.final_number_of_trees}}</td>
+                {% endwith %}
             </tr>
             {% endfor %}
         </tbody>
