--- a/vcweb/core/templates/monitor.html
+++ b/vcweb/core/templates/monitor.html
@@ -66,7 +66,7 @@
                 case 'chat':
                     break;
                 case 'submit':
-                    $('#participant_data_value_' + json.participant_round_data_value_pk).html(json.message).effect("highlight", {}, 5000);
+                    $('#participant_data_value_' + json.participant_data_value_pk).html(json.message).effect("highlight", {}, 5000).effect("bounce", { times: 3 }, 300);
                     addExperimentMessage("Participant " + json.participant_number + " (Group #" + json.participant_group + 
                         ") submit a harvest decision of " + json.message);
                     break;
