fixing html validation errors

--- a/vcweb/core/templates/registration/login.html
+++ b/vcweb/core/templates/registration/login.html
@@ -16,7 +16,7 @@ $(function() {
 
 {% block page %}
 
-<form id='loginForm' name='loginForm' action='' method='post'>
+<form id='loginForm' action='' method='post'>
     <h3>Returning User</h3>
     <p>
     Don&#39;t have an account or a first-time user?  Please <a href='{% url core:register %}'>register first</a>.
