--- a/vcweb/forestry/templates/forestry/wait.html
+++ b/vcweb/forestry/templates/forestry/wait.html
@@ -53,7 +53,7 @@ The facilitator will start the next round when every participant is ready.
                     Total group harvest decisions (B)
                 </th>
                 <th class='tooltip' title='The trees that regrew during this round.'>Trees regrown (C)</th>
-                <th class='tooltip' title='The number of trees available at the end of the round (A - B + C = D)'.>Final # trees (D)</th></tr>
+                <th class='tooltip' title='The number of trees available at the end of the round (A - B + C = D).'>Final # trees (D)</th></tr>
         </thead>
         <tbody>
             {% for harvest_round_data in participant_history %}
