--- a/vcweb/static/css/style.css
+++ b/vcweb/static/css/style.css
@@ -120,6 +120,9 @@ li.warning {
 .small-font {
     font-size: 0.8em;
 }
+.bold {
+    font-weight: bold;
+}
 fieldset.small {
     font: 0.8em "Helvetica Neue", helvetica, arial, sans-serif;
     color: #666;
