--- a/vcweb/core/templates/monitor.html
+++ b/vcweb/core/templates/monitor.html
@@ -87,7 +87,6 @@
             });
             scrollToBottom(experimentMessageDiv);
         });
-    </script>
 </script>
 {% endblock %}
 {% block title %}
@@ -114,12 +113,20 @@
     <legend>Experiment management</legend>
     <ul class='actions'>
         <li><span id='refreshAllParticipants' title='Sends a page refresh to all connected participants.' class='clickable' >
-            <span class='vcweb-icon ui-icon icon-left' style='background:url(/static/images/famfamfam/arrow_refresh.png);' alt=''></span>refresh all participants</a></li>
+            <span class='vcweb-icon ui-icon icon-left' style='background:url(/static/images/famfamfam/arrow_refresh.png);'></span>
+            refresh all participants</span>
+        </li>
         <li><span id='gotoUrl' title='Moves all connected participants from waiting page to active page.' class='clickable' >
-            <span class='vcweb-icon ui-icon icon-left' style='background:url(/static/images/famfamfam/arrow_right.png);' alt=''></span>transition all participants to next round</a></li>
+            <span class='vcweb-icon ui-icon icon-left' style='background:url(/static/images/famfamfam/arrow_right.png);'></span>
+            transition all participants to next round</span>
+        </li>
         <li>
-        <a href='download/csv'><span class='vcweb-icon ui-icon icon-left' style='margin: 8px 0.15em 0px 0px; background:url(/static/images/download-icon.png);' alt=''></span>download data as <img src='/static/images/famfamfam/page_white_text.png' style='margin: 5px 0 0 0;' alt=''> csv</a> |
-        <a href='download/xls'><img src='/static/images/famfamfam/page_white_excel.png' style='margin: 5px 0 0 0;' alt=''/> xls</a></li>
+        <a href='download/csv'>
+            <span class='vcweb-icon ui-icon icon-left' style='margin: 8px 0.15em 0px 0px; background:url(/static/images/download-icon.png);'></span>
+            download data as <img src='/static/images/famfamfam/page_white_text.png' style='margin: 5px 0 0 0;' alt='' /> csv
+        </a> |
+        <a href='download/xls'><img src='/static/images/famfamfam/page_white_excel.png' style='margin: 5px 0 0 0;' alt=''/> xls</a>
+        </li>
     </ul>
 </fieldset>
 <div class='experiment-dashboard'>
@@ -138,18 +145,18 @@
                 {% if experiment.is_active %}
                     {% if experiment.is_round_in_progress %}
                     <li><a class='confirm-experiment-action' name='end_round' href='end-round' title='Stops the current round.'>
-                        <span class='vcweb-icon icon-left ui-icon' style='background: url(/static/images/famfamfam/control_stop_blue.png);' alt=''></span>end round</a></li>
+                        <span class='vcweb-icon icon-left ui-icon' style='background: url(/static/images/famfamfam/control_stop_blue.png);' ></span>end round</a></li>
                     {% else %}
                     <li><a class='confirm-experiment-action' name='start_round' href='start-round' title='Starts the round.'>
-                        <span class='ui-icon vcweb-icon icon-left' style='background:url(/static/images/famfamfam/control_play_blue.png);' alt=''></span>start round</a></li>
+                        <span class='ui-icon vcweb-icon icon-left' style='background:url(/static/images/famfamfam/control_play_blue.png);' ></span>start round</a></li>
                     {% endif %}
                     <li><a class='confirm-experiment-action' name='advance_to_next_round' href='advance-to-next-round' title='Stops the current round if necessary and advances to the next round.'>
-                        <span class='vcweb-icon ui-icon icon-left' style='background:url(/static/images/famfamfam/control_fastforward_blue.png);' alt=''></span>advance to next round</a></li>
+                        <span class='vcweb-icon ui-icon icon-left' style='background:url(/static/images/famfamfam/control_fastforward_blue.png);' ></span>advance to next round</a></li>
                 {% else %}
                 <li><a class='confirm-experiment-action' name='setup_test_participants'
                     href='setup-test-participants/20' title='Set up 20 participants'>Activate experiment with 20 participants</a></li>
                 <li><a class='confirm-experiment-action' name='activate' href='activate' title='You must first activate an experiment before you can run it.'>
-                    <span class='vcweb-icon ui-icon icon-left' style='background:url(/static/images/famfamfam/cog_go.png);' alt=''></span>activate</a></li>
+                    <span class='vcweb-icon ui-icon icon-left' style='background:url(/static/images/famfamfam/cog_go.png);' ></span>activate</a></li>
                 {% endif %}
             </ul>
             <br/>
