--- a/vcweb/forestry/templates/forestry/participate.html
+++ b/vcweb/forestry/templates/forestry/participate.html
@@ -55,8 +55,8 @@ Participating in {{experiment.status_line}}
     &nbsp;
 </div>
 {% endif %}
-<div class='ui-state-highlight'>
-    <span class='icon-left ui-icon ui-icon-info'></span>
+<div style='padding: 5px; margin: 8px 0px;' class='ui-state-highlight'>
+    <span class='icon-left ui-icon ui-icon-info'>&nbsp;</span>
     There are <b>{{ resource_level.value }}</b> trees left.
 </div>
 
@@ -71,7 +71,7 @@ Participating in {{experiment.status_line}}
 <form id='forestry-form' action='' method='post'>
     <div class='field'>
         <br/>
-        <label for='harvest-decision-id'>How many trees will you harvest this round? <br/><small><b>Choose a number between 0 and {{ max_harvest_decision }}</small></b>:</label>
+        <label for='harvest-decision-id'>How many trees will you harvest this round? <br/><span class='small-font bold'>Choose a number between 0 and {{ max_harvest_decision }}</span>:</label>
         <input id='harvest-decision-id' type="text" name='harvest_decision' class='required digits two-digits' maxlength='1'/>
     </div>
     <div class='field'>
