--- a/vcweb/core/templates/base-experimenter.html
+++ b/vcweb/core/templates/base-experimenter.html
@@ -1,14 +1,13 @@
 {% extends "base.html" %}
-
 {% block head %}
 {{ block.super}}
-<script type='text/javascript' src='/static/js/jquery.confirm.min.js'></script>
+<script type='text/javascript'>
+    var qtipOptions = {position: { corner: {target: 'topMiddle', tooltip: 'bottomMiddle'}}, style: { name: 'dark', tip: 'bottomMiddle'} };
+    $(function() {
+        $('[title]').qtip(qtipOptions);
+    });
+</script>
+{% include "includes/jquery.confirm.html" %}
 {% endblock %}
-
-{% block title %} 
-    Virtual Commons Web Experimenter Interface 
-{% endblock %} 
-
-{% block header %}
-    {% include "includes/experimenter-nav-menu.html" %}
-{% endblock %}
+{% block title %}Virtual Commons Web Experimenter Interface{% endblock %}
+{% block header %}{% include "includes/experimenter-nav-menu.html" %}{% endblock %}
