--- a/vcweb/static/css/style.css
+++ b/vcweb/static/css/style.css
@@ -181,16 +181,16 @@ ul.horizontal {
     text-decoration: none;
     font-size: 0.9em;
 }
-#horizontal a {
+ul.horizontal>li>a {
     background: url("/static/images/separator.gif") bottom right no-repeat;
     padding-left: 8px;
     padding-right: 8px;
     text-decoration: none;
 }
-#horizontal a:hover {
+ul.horizontal>li>a:hover {
     text-decoration: underline;
 }
-#horizontal li {
+ul.horizontal>li {
     float: left;
     margin: 6px 0px 0px 0px;
     padding: 0;
@@ -249,4 +249,57 @@ ul.horizontal {
 }
 #chatText {
     width: 100%;
+}
+#jqDialog_box {
+	background: #f5f5f5;
+	position: absolute;
+	width: 450px;
+	height: 150px;
+	font-family: Arial;
+	border-width: 1px 3px 3px 1px;
+	border-style: solid;
+	border-color: #ccc;
+	-moz-border-radius: 6px;
+	-webkit-border-radius: 6px;
+	-khtml-border-radius: 6px;
+	border-radius: 6px;
+	-moz-box-shadow: 0 0 30px #e6e6e6;
+}
+#jqDialog_content {
+	margin: 10px;
+	font-weight: bold;
+	font-size: 12px;
+	height: 90px;
+	overflow: hidden;
+}
+#jqDialog_options {
+	margin: 10px;
+	text-align: center;
+}
+#jqDialog_options button {
+	font-family: Arial;
+	margin-right: 5px;
+	background: #000;
+	border: 0px;
+	font-size: 1.5em;
+	color: #fff;
+	width: auto;
+	cursor: pointer;
+	-moz-border-radius: 3px;
+	-webkit-border-radius: 3px;
+	-khtml-border-radius: 3px;
+	border-radius: 3px;
+}
+#jqDialog_input {
+	padding: 4px;
+	width: 250px;
+}
+#jqDialog_close {
+	background: none;
+	border: none;
+	float: right;
+	font-weight: bold;
+	font-size: 10px;
+	color: #ff0000;
+	cursor: pointer;
 }
