Replacing old confirm plugin w/ fastConfirm ParameterizedValue type_values are no longer required in the admin interface (blank=True) No longer showing activate if there's no registered participants in the monitor interface

--- a/vcweb/core/templates/experimenter-index.html
+++ b/vcweb/core/templates/experimenter-index.html
@@ -46,9 +46,9 @@ FIXME: replace these links eventually.
             <li><a title='Monitor and control this experiment' href='{{e.monitor_url}}'><img src='/static/images/famfamfam/zoom.png' alt='General experiment monitoring interface'/> monitor</a></li>
             <li><a class='confirm-experiment-action' title='Clone this experiment.  This creates a new copy of this experiment with the exact same configuration but no registered participants.' href='{{e.clone_url}}'><img src='/static/images/famfamfam/page_copy.png' alt='Clone experiment'/> clone</a></li>
             <li>
-            <a class='confirm-experiment-action' title='Register 15 participants for this experiment' href='{{e.controller_url}}/add-participants/15'><img src='/static/images/famfamfam/add.png' alt='add participants'/> add 15 students</a>
-            <a class='confirm-experiment-action' title='Register 20 participants for this experiment' href='{{e.controller_url}}/add-participants/20'>20 students</a>
-            <a class='confirm-experiment-action' title='Register 25 participants for this experiment' href='{{e.controller_url}}/add-participants/25'>25 students</a>
+            <a class='confirm-experiment-action' title='Register 15 participants for this experiment' href='{{e.controller_url}}/add-participants/15'><img src='/static/images/famfamfam/add.png' alt='add participants'/> register <b>15 students</b></a>
+            <a class='confirm-experiment-action' title='Register 20 participants for this experiment' href='{{e.controller_url}}/add-participants/20'><b>20 students</b></a>
+            <a class='confirm-experiment-action' title='Register 25 participants for this experiment' href='{{e.controller_url}}/add-participants/25'><b>25 students</b></a>
             </li>
             <!-- <li><a href='{{e.management_url}}'><img src='/static/images/famfamfam/application_go.png' alt='Custom management interface'/> manage (unfinished)</a></li> -->
             <li><a title='clear all participants' href='{{e.controller_url}}/clear-participants' class='confirm-experiment-action'><img src='/static/images/famfamfam/delete.png' alt=''/> clear all participants</a></li>
