changing goto url events to be consistent with regular message events.  Should probably rename message to payload and make them generic events.

--- a/vcweb/core/templates/includes/experimenter.events.html
+++ b/vcweb/core/templates/includes/experimenter.events.html
@@ -7,12 +7,7 @@ function createGotoEvent(url) {
     if (! url) {
         url = "participate";
     }
-    return {
-        'type': 'goto',
-        'experimenter_id': {{ request.user.experimenter.pk }},
-        'experiment_id': {{ experiment.pk }},
-        'url': url
-    };
+    return createMessageEvent(url);
 }
 function createConnectionEvent() {
    return createMessageEvent("Initial connection", "connect");
