--- a/vcweb/forestry/templates/forestry/participate.html
+++ b/vcweb/forestry/templates/forestry/participate.html
@@ -80,7 +80,7 @@ Participating in {{experiment.status_line}}
 </form>
 {% else %}
 <div class='alert ui-corner-all'>
-    <span class='ui-icon ui-icon-alert'></span>
+    <span class='ui-icon ui-icon-alert icon-left'></span>
     There aren't enough resources to harvest.
 </div>
 {% endif %}
