--- a/vcweb/forestry/templates/forestry/participate.html
+++ b/vcweb/forestry/templates/forestry/participate.html
@@ -46,7 +46,7 @@ Participating in {{experiment.status_line}}
 {% block content %}
 <h3>Forestry round number {{ experiment.current_round.round_number }}</h3>
 {% for i in number_of_resource_divs %}
-<div style="background: url('/static/images/forestry/pine-tree.png') repeat-x; width:{{max_width}}px; height: 79px;">
+<div style="background: url('/static/images/forestry/{{tree.name}}.png') repeat-x; width:{{max_width}}px; height: {{tree.height}}px;">
     &nbsp;
 </div>
 {% endfor %}
@@ -55,6 +55,7 @@ Participating in {{experiment.status_line}}
     &nbsp;
 </div>
 {% endif %}
+
 {% if resource_level.value == 0 %}
 <div style='padding: 8px; margin: auto; border: solid 1px; background: #E8E8E8 url(/static/images/forestry/deforestation.jpg) no-repeat center; height: 282px; width:425px;'>
     &nbsp;
