--- a/vcweb/forestry/templates/forestry/wait.html
+++ b/vcweb/forestry/templates/forestry/wait.html
@@ -6,8 +6,10 @@
 {% include "includes/tablesorter.html" %}
 <script type="text/javascript">
     $(function() {
-        $('#participant-history').tablesorter({widgets: ['zebra'], sortList: [[0, 0]] });
-        $('.tooltip').qtip({position: { corner: {target: 'topMiddle', tooltip: 'bottomMiddle'}}, style: { name: 'green', tip: 'bottomMiddle'} });
+            $('#participant-history').tablesorter({widgets: ['zebra'], 
+                headers: { 0: {sorter: false}, 1: {sorter: false} }
+            });
+        $('[title]').qtip({position: { corner: {target: 'topMiddle', tooltip: 'bottomMiddle'}}, style: { name: 'green', tip: 'bottomMiddle'} });
         var s = getCachedSocket();
         s.on('message', function(json_string) {
             var json = jQuery.parseJSON(json_string);
